﻿###WHATS_MY_IP - CHANGELOG###

## v1.3.2 (BETA)
!Unfunktionierende Ping-Hoster werden übersprungen (ACHTUNG: Nicht fertig, ping funkt nicht mehr!!)
+Refaktoring


## v1.3.1 (BETA)
+Ping wird 10 mal durchgeführt und am Ende gedurchnittlicht
!Programm crasht wenn keine Internetverbindung besteht

## v1.3.0 (BETA)
+Analisieren von benutzerdefinierte Adresse

## v1.2.0
+Ping-Hoster ist jetzt benutzerdefinierbahr
+Fehler werden nun auffälliger angezeigt