@@ -42,8 +42,13 @@ namespace Whats_My_IP
 			this.groupBox_IPBox = new System.Windows.Forms.GroupBox();
 			this.statusStrip_Main = new System.Windows.Forms.StatusStrip();
 			this.toolStripStatusLabel_Status = new System.Windows.Forms.ToolStripStatusLabel();
+<<<<<<< HEAD
 			this.button_Go = new System.Windows.Forms.Button();
 			this.backgroundWorker_Main = new System.ComponentModel.BackgroundWorker();
+=======
+			this.button_GetIP = new System.Windows.Forms.Button();
+			this.backgroundWorker_GetIP = new System.ComponentModel.BackgroundWorker();
+>>>>>>> parent of b3eefd5... v1.3.1 BETA
 			this.groupBox_ISPBox = new System.Windows.Forms.GroupBox();
 			this.label_ISP = new System.Windows.Forms.Label();
 			this.groupBox_LocationBox = new System.Windows.Forms.GroupBox();
@@ -120,10 +125,10 @@ namespace Whats_My_IP
 			this.button_Go.UseVisualStyleBackColor = true;
 			this.button_Go.Click += new System.EventHandler(this.Button_GetIPClick);
 			// 
-			// backgroundWorker_Main
+			// backgroundWorker_GetIP
 			// 
-			this.backgroundWorker_Main.DoWork += new System.ComponentModel.DoWorkEventHandler(this.BackgroundWorker_MainDoWork);
-			this.backgroundWorker_Main.RunWorkerCompleted += new System.ComponentModel.RunWorkerCompletedEventHandler(this.BackgroundWorker_MainRunWorkerCompleted);
+			this.backgroundWorker_GetIP.DoWork += new System.ComponentModel.DoWorkEventHandler(this.BackgroundWorker_GetIPDoWork);
+			this.backgroundWorker_GetIP.RunWorkerCompleted += new System.ComponentModel.RunWorkerCompletedEventHandler(this.BackgroundWorker_GetIPRunWorkerCompleted);
 			// 
 			// groupBox_ISPBox
 			// 
@@ -260,8 +265,13 @@ namespace Whats_My_IP
 		private System.Windows.Forms.GroupBox groupBox_LocationBox;
 		private System.Windows.Forms.Label label_ISP;
 		private System.Windows.Forms.GroupBox groupBox_ISPBox;
+<<<<<<< HEAD
 		private System.ComponentModel.BackgroundWorker backgroundWorker_Main;
 		private System.Windows.Forms.Button button_Go;
+=======
+		private System.ComponentModel.BackgroundWorker backgroundWorker_GetIP;
+		private System.Windows.Forms.Button button_GetIP;
+>>>>>>> parent of b3eefd5... v1.3.1 BETA
 		private System.Windows.Forms.ToolStripStatusLabel toolStripStatusLabel_Status;
 		private System.Windows.Forms.StatusStrip statusStrip_Main;
 		private System.Windows.Forms.GroupBox groupBox_IPBox;
