@@ -1,5 +1,6 @@
-﻿###WHATS_MY_IP - CHANGELOG###
+###WHATS_MY_IP - CHANGELOG###
 
+<<<<<<< HEAD
 ## v1.3.2 (BETA)
 !Unfunktionierende Ping-Hoster werden übersprungen (ACHTUNG: Nicht fertig, ping funkt nicht mehr!!)
 +Refaktoring
@@ -11,6 +12,8 @@
 
 ## v1.3.0 (BETA)
 +Analisieren von benutzerdefinierte Adresse
+=======
+>>>>>>> parent of b3eefd5... v1.3.1 BETA
 
 ## v1.2.0
 +Ping-Hoster ist jetzt benutzerdefinierbahr
